[gd_scene load_steps=21 format=2]

[ext_resource path="res://Levels/FinalLevel/FinalLevel.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Effect/WorldEnvironment.tscn" type="PackedScene" id=3]
[ext_resource path="res://Boxes/PlayerMapDetection.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/FinalLevel/aura.png" type="Texture" id=5]
[ext_resource path="res://World/tileset2.tres" type="TileSet" id=6]
[ext_resource path="res://UI/Text.tscn" type="PackedScene" id=7]
[ext_resource path="res://PauseMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/HealthUI.tscn" type="PackedScene" id=9]
[ext_resource path="res://World/Environment/Advertising/Advertising01/Advertisement1.tscn" type="PackedScene" id=10]
[ext_resource path="res://Levels/FinalLevel/Aura.gd" type="Script" id=11]
[ext_resource path="res://World/Environment/Advertising/Advertising02/Advertisement2.tscn" type="PackedScene" id=12]
[ext_resource path="res://World/Environment/Advertising/Advertising03/Advertisement3.tscn" type="PackedScene" id=13]
[ext_resource path="res://Levels/FinalLevel/aura.wav" type="AudioStream" id=14]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.486486 )
colors = PoolColorArray( 0.536133, 0.521473, 0.521473, 1, 0.506821, 0.85048, 0.926758, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0.0116959, 0.440909 ), 0.0, 4.275, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_align_y = true
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 150.54
orbit_velocity = 0.5
orbit_velocity_random = 0.0
linear_accel = 10.0
scale = 7.0
scale_random = 0.5
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="RectangleShape2D" id=6]

[node name="Level10" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1830.0
margin_bottom = 730.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
cell_size = Vector2( 32, 16 )
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( -327681, 0, 0, -262145, 0, 0, -196609, 0, 0, -131073, 0, 0, -65537, 0, 0, -1, 0, 0, 65535, 0, 0, 131071, 0, 0, 196607, 0, 0, 262143, 0, 0, 327679, 0, 0, 393215, 0, 0, 458751, 0, 0, 524287, 0, 0, 589823, 0, 0, 655359, 0, 0, 720895, 0, 0, 786431, 0, 0, 720934, 0, 0, 851967, 0, 0, 786470, 0, 0, 917503, 0, 0, 852006, 0, 0, 983039, 0, 0, 917542, 0, 0, 1048575, 0, 0, 983078, 0, 0, 1114111, 0, 0, 1048614, 0, 0, 1179647, 0, 0, 1114150, 0, 0, 1245183, 0, 0, 1179686, 0, 0, 1310719, 0, 0, 1245222, 0, 0, 1376255, 0, 0, 1310758, 0, 0, 1441791, 0, 0, 1376294, 0, 0, 1441792, 0, 0, 1441793, 0, 0, 1441794, 0, 0, 1441795, 0, 0, 1441796, 0, 0, 1441797, 0, 0, 1441798, 0, 0, 1441799, 0, 0, 1441800, 0, 0, 1441801, 0, 0, 1441802, 0, 0, 1441803, 0, 0, 1441804, 0, 0, 1441805, 0, 0, 1441806, 0, 0, 1441807, 0, 0, 1441808, 0, 0, 1441809, 0, 0, 1441810, 0, 0, 1441811, 0, 0, 1441812, 0, 0, 1441813, 0, 0, 1441814, 0, 0, 1441815, 0, 0, 1441816, 0, 0, 1441817, 0, 0, 1441818, 0, 0, 1441819, 0, 0, 1441820, 0, 0, 1441821, 0, 0, 1441822, 0, 0, 1441823, 0, 0, 1441824, 0, 0, 1441825, 0, 0, 1441826, 0, 0, 1441827, 0, 0, 1441828, 0, 0, 1441829, 0, 0, 1441830, 0, 0 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource( 8 )]
visible = false

[node name="HealthUI" parent="CanvasLayer" instance=ExtResource( 9 )]

[node name="Text" parent="CanvasLayer" instance=ExtResource( 7 )]
margin_top = 0.595276
margin_bottom = 0.595276

[node name="TextLabel" parent="CanvasLayer/Text" index="3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -567.405
margin_top = 170.753
margin_right = 552.595
margin_bottom = 310.753
custom_colors/default_color = Color( 0.717647, 0.690196, 0.690196, 1 )

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 29.9391, -52.6054 )

[node name="Ad1" type="YSort" parent="YSort"]

[node name="Advertisement1" parent="YSort/Ad1" instance=ExtResource( 10 )]
position = Vector2( 1100.73, 222.347 )
frame = 2

[node name="Advertisement2" parent="YSort/Ad1" instance=ExtResource( 10 )]
position = Vector2( 1008.08, 292.728 )
frame = 1

[node name="Advertisement3" parent="YSort/Ad1" instance=ExtResource( 10 )]
position = Vector2( 1170.22, 268.674 )
frame = 3

[node name="Advertisement4" parent="YSort/Ad1" instance=ExtResource( 10 )]
position = Vector2( 1105.19, 327.474 )

[node name="Ad2" type="YSort" parent="YSort"]

[node name="Advertisement2" parent="YSort/Ad2" instance=ExtResource( 12 )]
position = Vector2( 1138.15, 242.838 )
frame = 5

[node name="Advertisement3" parent="YSort/Ad2" instance=ExtResource( 12 )]
position = Vector2( 1161.31, 315.001 )
frame = 7

[node name="Advertisement4" parent="YSort/Ad2" instance=ExtResource( 12 )]
position = Vector2( 1016.1, 223.238 )
frame = 0

[node name="Ad3" type="YSort" parent="YSort"]

[node name="Advertisement3" parent="YSort/Ad3" instance=ExtResource( 13 )]
position = Vector2( 1131.91, 304.31 )
frame = 1

[node name="Advertisement4" parent="YSort/Ad3" instance=ExtResource( 13 )]
position = Vector2( 1046.39, 261.547 )
frame = 0

[node name="Advertisement5" parent="YSort/Ad3" instance=ExtResource( 13 )]
position = Vector2( 1057.97, 316.783 )
frame = 1

[node name="Advertisement6" parent="YSort/Ad3" instance=ExtResource( 13 )]
position = Vector2( 965.316, 285.601 )

[node name="Advertisement7" parent="YSort/Ad3" instance=ExtResource( 13 )]
position = Vector2( 1058.86, 216.111 )
frame = 1

[node name="Advertisement8" parent="YSort/Ad3" instance=ExtResource( 13 )]
position = Vector2( 1137.26, 212.548 )
frame = 2

[node name="PlayerMapDetection" parent="." instance=ExtResource( 4 )]
position = Vector2( 94.1418, 247.38 )
page = 25

[node name="PlayerMapDetection2" parent="." instance=ExtResource( 4 )]
position = Vector2( 226.312, 248.426 )
page = 26

[node name="PlayerMapDetection3" parent="." instance=ExtResource( 4 )]
position = Vector2( 415.076, 249.162 )
page = 27

[node name="PlayerMapDetection4" parent="." instance=ExtResource( 4 )]
position = Vector2( 559.401, 247.38 )
page = 28

[node name="PlayerMapDetection5" parent="." instance=ExtResource( 4 )]
position = Vector2( 730.454, 249.162 )
page = 29

[node name="PlayerMapDetection6" parent="." instance=ExtResource( 4 )]
position = Vector2( 885.47, 249.162 )
page = 30

[node name="PlayerMapDetection7" parent="." instance=ExtResource( 4 )]
position = Vector2( 946.051, 249.162 )
page = 31

[node name="WorldEnvironment" parent="." instance=ExtResource( 3 )]

[node name="AuraBody" type="KinematicBody2D" parent="."]
position = Vector2( 1079.69, 284.997 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 11 )

[node name="Aura" type="Sprite" parent="AuraBody"]
position = Vector2( 0.283325, 0.024826 )
texture = ExtResource( 5 )

[node name="Particles2D" type="Particles2D" parent="AuraBody"]
position = Vector2( 2.1333, 40.4074 )
amount = 25
lifetime = 5.0
process_material = SubResource( 5 )

[node name="Up" type="Timer" parent="AuraBody"]
one_shot = true
autostart = true

[node name="Down" type="Timer" parent="AuraBody"]
one_shot = true

[node name="Area2D" type="Area2D" parent="AuraBody"]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AuraBody/Area2D"]
shape = SubResource( 6 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="AuraBody"]
stream = ExtResource( 14 )
volume_db = 24.0
autoplay = true
max_distance = 500.0

[node name="Stop" type="Timer" parent="."]
one_shot = true
[connection signal="player_died" from="YSort/Player" to="." method="_on_Player_player_died"]
[connection signal="player_entered" from="PlayerMapDetection" to="." method="_on_PlayerMapDetection_player_entered"]
[connection signal="player_entered" from="PlayerMapDetection2" to="." method="_on_PlayerMapDetection_player_entered"]
[connection signal="player_entered" from="PlayerMapDetection3" to="." method="_on_PlayerMapDetection_player_entered"]
[connection signal="player_entered" from="PlayerMapDetection4" to="." method="_on_PlayerMapDetection_player_entered"]
[connection signal="player_entered" from="PlayerMapDetection5" to="." method="_on_PlayerMapDetection_player_entered"]
[connection signal="player_entered" from="PlayerMapDetection6" to="." method="_on_PlayerMapDetection_player_entered"]
[connection signal="player_entered" from="PlayerMapDetection7" to="." method="_on_PlayerMapDetection_player_entered"]
[connection signal="timeout" from="AuraBody/Up" to="AuraBody" method="_on_Up_timeout"]
[connection signal="timeout" from="AuraBody/Down" to="AuraBody" method="_on_Down_timeout"]
[connection signal="area_entered" from="AuraBody/Area2D" to="AuraBody" method="_on_Area2D_area_entered"]
[connection signal="finished" from="AuraBody/AudioStreamPlayer2D" to="AuraBody" method="_on_AudioStreamPlayer2D_finished"]
[connection signal="timeout" from="Stop" to="." method="_on_Stop_timeout"]

[editable path="CanvasLayer/Text"]
